--- a/phots.html
+++ b/phots.html
@@ -22,6 +22,6 @@
             <br> <img src="images.jpg" alt="Students in lab">
         </li>
     </ol>
-    <br> <a href=""></a>
+    <br> <a href="enrolmentform.html">Click if you wish to enrol into our school</a>
 </body>
 </html>
