--- a/enrolmentform.html
+++ b/enrolmentform.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>enrolmentform</title>
 </head>
+
 <body>
     <u>
         <h1>Barachel Model College School Student Registeration Form</h1>
@@ -96,6 +98,8 @@
 
 
     </form>
-    <footer> Barachel Model College @ Ifako-Agege
+    <br> <a href="myschl.html">Home Page</a>
+    <footer> 7,Barachel Model College @ Mojisola Street, Ifako-Agege</footer>
 </body>
+
 </html>
