--- a/enrolmentform.html
+++ b/enrolmentform.html
@@ -102,8 +102,12 @@
 
 
     </form>
-    <br> <a href="myschl.html">Home Page</a>
+    <br>
+    <div class="footer">
+    <a href="myschl.html">Home Page</a>
     <footer> 7,Barachel Model College @ Mojisola Street, Ifako-Agege</footer>
-</body>
+</div>
+
+</body><br>
 
 </html>
